Avoid setting wrong font size

--- a/askbot/media/style/style.less
+++ b/askbot/media/style/style.less
@@ -2736,14 +2736,11 @@ ul#related-tags li {
 .meta,
 .user-profile-edit-page,
 {
-    font-size:13px;
     line-height:1.3;
     color:@info-text-dark;
     p{
-        font-size:13px;
         color:@info-text;
         line-height:1.3;
-        font-family:@body-font;
         color:@info-text-dark;
         margin-bottom:12px;
     }
